Fixed activity list overflow

--- a/pcxdarktheme.css
+++ b/pcxdarktheme.css
@@ -177,6 +177,11 @@ div.xli-comment-well {
     border-color: #263238 !important;
 }
 
+/* Other CSS Fixes */
+app-activity mat-tab-group div.mat-tab-body-wrapper .mat-tab-body.mat-tab-body-active {
+    overflow-y: hidden !important;
+}
+
 /* Custom CSS Elements */
 .mat-progress-bar-percentage {
     transform: translate(-25px, -39px);
